--- a/ci.gocd.yaml
+++ b/ci.gocd.yaml
@@ -17,5 +17,7 @@ pipelines:
                 - exec:
                     arguments:
                       - "-c"
+                      - "ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+                      - "brew install node"
                       - "CI=true npm test"
                     command: /bin/bash
