[#00] - Something to test

--- a/ci.gocd.yaml
+++ b/ci.gocd.yaml
@@ -17,5 +17,5 @@ pipelines:
                 - exec:
                     arguments:
                       - "-c"
-                      - "CI=true npm test"
+                      - "npm install && CI=true npm test"
                     command: /bin/bash
